--- a/enggpaypal.css
+++ b/enggpaypal.css
@@ -1,15 +1,15 @@
 #title{
     font-weight: 300;
-    font-size: 24px;
-}
-
-#search{
-    text-align: center;
-    
+    font-size: 1.8rem;
+    font-family: sans-serif, "Roboto"
 }
 
 #filter {
     text-align: center;
+}
+
+.search{
+    text-align: inherit;
 }
 
 .card-content{
@@ -17,16 +17,20 @@
   align-content: center;
 }
 
-.icon {
-   font-size: 2rem;
-   padding: inherit;
-    margin-right: 0;
-}
 .product-logo{
     padding:10%;
+}
+
+.icon {
+    font-size: 1.5rem;
 }
 
 p {
     margin-bottom: 20px !important;
 }
+
+#icon-prefix {
+    padding-left: 30%;
+}
+
 
