--- a/enggpaypal.css
+++ b/enggpaypal.css
@@ -9,22 +9,35 @@
 }
 
 .search{
-    text-align: inherit;
+    text-align: center;
 }
 
+.link{
+    margin: 0px !important;
+    padding: 0px !important;
+    font-size: 1rem !important;
+}
 .card-content{
   text-align: center;
   align-content: center;
 }
 
 .product-logo{
-    padding:10%;
+padding-bottom: 5%;
 }
 
 .icon {
-    font-size: 1.5rem;
+    padding-top: 10%;
+    font-size: 1.25rem;
 }
 
+i:hover{
+    color: lightskyblue !important;
+}
+
+i.heart:hover{
+    color: gold !important;
+}
 p {
     margin-bottom: 20px !important;
 }
