--- a/enggpaypal.css
+++ b/enggpaypal.css
@@ -28,7 +28,11 @@ padding-bottom: 5%;
 
 .icon {
     padding-top: 10%;
-    font-size: 1.25rem;
+    font-size: 1rem;
+}
+
+.heart {
+    font-size: 1.5rem;
 }
 
 i:hover{
@@ -36,7 +40,7 @@ i:hover{
 }
 
 i.heart:hover{
-    color: gold !important;
+    color: lightcoral!important;
 }
 p {
     margin-bottom: 20px !important;
@@ -46,4 +50,9 @@ p {
     padding-left: 30%;
 }
 
+.link:hover {
+    
+    color: lightskyblue !important;
+}
+    
 
