--- a/enggpaypal.css
+++ b/enggpaypal.css
@@ -1,6 +1,7 @@
+
 #title{
     font-weight: 300;
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     font-family: sans-serif, "Roboto"
 }
 
@@ -14,7 +15,6 @@
 
 .link{
     margin: 0px !important;
-    padding: 0px !important;
     font-size: 1rem !important;
 }
 .card-content{
@@ -23,16 +23,24 @@
 }
 
 .product-logo{
-padding-bottom: 5%;
+
+    padding-bottom: 5%;
 }
 
+.card-content{
+    padding: 10px; !important;
+}
 .icon {
-    padding-top: 10%;
+    padding-top: 5%;
     font-size: 1rem;
 }
 
 .heart {
     font-size: 1.5rem;
+}
+
+.card-title{
+    margin-top: 0;
 }
 
 i:hover{
