--- a/enggpaypal.css
+++ b/enggpaypal.css
@@ -1,7 +1,8 @@
 
 #title{
     font-weight: 300;
-    font-size: 1.5rem;
+    font-size: 1.25rem;
+    text-align: justify;
     font-family: sans-serif, "Roboto"
 }
 
