made icons much smaller (40 x 40)

--- a/enggpaypal.css
+++ b/enggpaypal.css
@@ -1,8 +1,7 @@
 
 #title{
     font-weight: 300;
-    font-size: 1.25rem;
-    text-align: justify;
+    font-size: 1.5rem;
     font-family: sans-serif, "Roboto"
 }
 
@@ -16,28 +15,28 @@
 
 .link{
     margin: 0px !important;
-    font-size: 1rem !important;
+    font-size: 14px !important;
 }
 .card-content{
   text-align: center;
   align-content: center;
 }
 
+.image{
+    width: 40px;
+}
 .product-logo{
 
     padding-bottom: 5%;
 }
 
-.card-content{
-    padding: 10px; !important;
-}
 .icon {
     padding-top: 5%;
     font-size: 1rem;
 }
 
 .heart {
-    font-size: 1.5rem;
+    font-size: 16px;
     padding: 5%;
 }
 
